[tool.poetry]
name = "climaargbot"
version = "0.1.0"
description = "Clima Arg Telegram Bot"
authors = ["Guadalupe Perez <guadalupe.perezb@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
python-telegram-bot = "^13.4.1"
python-dotenv = "^0.15.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
